Ignore announcements from services with a lower version

https://bugzilla.gnome.org/show_bug.cgi?id=673150